--- a/index.html
+++ b/index.html
@@ -40,3 +40,4 @@
       <h2><em>Email: </em><span href="mailto:liambarstad@gmail.com?subject=Greivances&body=This%is%why%I%hate%you">liambarstad@gmail.com</span></h2>
       <h2>Turing School of Software and Design, Cohort 1706</h2>
     </footer>
+  </body>
